--- a/index.html
+++ b/index.html
@@ -470,14 +470,14 @@
                     <li class="reviews__item show js-slider-item-infinity">
                         <div class="content">
                             <p>Семинар понравился, лекции ведут профессионалы. Спасибо УкрКонсалтингу за проведенное мероприятие. Семинар понравился, лекции ведут профессионалы.</p>
-                            <button class="js-more-info more_info">Читать весь отзыв</button>
                         </div>
                         <div class="reviews__item-wrapper">
+                            <button class="js-more-info more_info">Читать весь отзыв</button>
                             <div class="wrapper">
                                 <h5 class="reviews__name">Иван Кротов</h5>
                                 <p class="reviews__sub">эколог, Харьковский трубный завод имени Васильевича </p>
                             </div>
-                            <div class="reviews__img"></div>
+                            <div class="reviews__img" style="background-image:url(./img/reviews-img-1.png)"></div>
                         </div>
                     </li>
                     <li class="reviews__item js-slider-item-infinity">
@@ -489,17 +489,47 @@
                                 <h5 class="reviews__name">Марина Кружевная</h5>
                                 <p class="reviews__sub">эколог, Харьковский трубный завод имени Васильевича </p>
                             </div>
-                            <div class="reviews__img"></div>
+                            <div class="reviews__img" style="background-image:url(./img/reviews-img-2.png)"></div>
+                        </div>
+                    </li>
+                    <li class="reviews__item js-slider-item-infinity">
+                        <div class="content">
+                            <p>Сегодня был супер день. Особенно подравилась экскурсия на Phillip Morris</p>
+                        </div>
+                        <div class="reviews__item-wrapper">
+                            <div class="wrapper">
+                                <h5 class="reviews__name">Марина Кружевная</h5>
+                                <p class="reviews__sub">эколог, Харьковский трубный завод имени Васильевича </p>
+                            </div>
+                            <div class="reviews__img" style="background-image:url(./img/reviews-img-2.png)"></div>
+                        </div>
+                    </li>
+                    <li class="reviews__item js-slider-item-infinity">
+                        <div class="content">
+                            <p>Сегодня был супер день. Особенно подравилась экскурсия на Phillip Morris</p>
+                        </div>
+                        <div class="reviews__item-wrapper">
+                            <div class="wrapper">
+                                <h5 class="reviews__name">Марина Кружевная</h5>
+                                <p class="reviews__sub">эколог, Харьковский трубный завод имени Васильевича </p>
+                            </div>
+                            <div class="reviews__img" style="background-image:url(./img/reviews-img-2.png)"></div>
                         </div>
                     </li>
                 </ul>
                 <div class="buttons__wrapper js-arrow-infinity">
                     <button class="slider-button prev"></button>
+                    <button class="slider-button next"></button>
                     <button class="main_button js-button">
                         <span class="text">СМОТРЕТЬ ВСЕ СЕМИНАРЫ</span>
-                    </button>
-                    <button class="slider-button next"></button>
+                    </button> 
                 </div>
+            </div>
+        </section>
+        <section class="notyfication">
+            <div class="noryfication__wrapper container">
+                <h2 class="main-caption-m">Уведомления</h2>
+                <p class="notydication-sub"></p>
             </div>
         </section>
     </main>
