--- a/clients.html
+++ b/clients.html
@@ -17,7 +17,7 @@
                     <li class="header__item drop-item">
                         <div class="wrapper">
                             <span>Меню</span>
-                            <span class="icon-arrow-header"></span>
+                            <span class="icon-drop"></span>
                         </div>
                         <ul class="burger-menu__list">
                             <li class="burger-menu__item">
@@ -386,7 +386,7 @@
                     <p>Присоединятесь к передовым компаниям Украины в стремлении обучаться и получать качественную информационную поддержку</p>
                     <form action="#" class="clints-callback__form">
                         <label class="input_wrapper">
-                            <p>Введите ваш E-mail и мы свяжемся с вами</p>
+                            <span class="input-caption">Введите ваш E-mail и мы свяжемся с вами</span>
                             <input type="text" class="main_input js-input" placeholder="Харьковская область">
                         </label>
                         <button class="main_button-color js-button-decor">
