--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul class="header__list">
                     <li class="header__item drop-item">
                         <div class="wrapper">
-                            <span>Меню</span>
+                            <span class="text">Меню</span>
                             <span class="icon-drop"></span>
                         </div>
                         <ul class="burger-menu__list">
