--- a/plan-events.html
+++ b/plan-events.html
@@ -239,7 +239,6 @@
                                 </div>
                                 <div class="full-events__item__wrapper">
                                     <p class="events-position-month">
-                                         <strong>Январь</strong>
                                     </p>
                                     <p class="events-position-date">18.01</p>
                                     <p class="events-position-theme">
@@ -255,9 +254,7 @@
                                     </p>
                                 </div>
                                 <div class="full-events__item__wrapper">
-                                    <p class="events-position-month">
-                                         <strong>Январь</strong>
-                                    </p>
+                                    <p class="events-position-month"></p>
                                     <p class="events-position-date">28.01</p>
                                     <p class="events-position-theme">
                                         <strong>Культура безопасности на производстве - фактор снижения рисков несчастных случаев и чрезвычайных ситуаций</strong>
@@ -291,9 +288,7 @@
                                     </p>
                                 </div>
                                 <div class="full-events__item__wrapper">
-                                    <p class="events-position-month">
-                                         <strong>Январь</strong>
-                                    </p>
+                                    <p class="events-position-month"></p>
                                     <p class="events-position-date">18.01</p>
                                     <p class="events-position-theme">
                                         <strong>Культура безопасности на производстве - фактор снижения рисков несчастных случаев и чрезвычайных ситуаций</strong>
@@ -308,9 +303,7 @@
                                     </p>
                                 </div>
                                 <div class="full-events__item__wrapper">
-                                    <p class="events-position-month">
-                                         <strong>Январь</strong>
-                                    </p>
+                                    <p class="events-position-month"></p>
                                     <p class="events-position-date">28.01</p>
                                     <p class="events-position-theme">
                                         <strong>Культура безопасности на производстве - фактор снижения рисков несчастных случаев и чрезвычайных ситуаций</strong>
