--- a/plan-events.html
+++ b/plan-events.html
@@ -144,6 +144,200 @@
                             </div>
                         </div>
                         <div class="calendar__body">
+                            <table class="calendar__table">
+                                <thead>
+                                    <tr class="calendar__table__header">
+                                        <th class="calendar__table__item"><span>Пн</span></th>
+                                        <th class="calendar__table__item"><span>Вт</span></th>
+                                        <th class="calendar__table__item"><span>Ср</span></th>
+                                        <th class="calendar__table__item"><span>Чт</span></th>
+                                        <th class="calendar__table__item"><span>Пт</span></th>
+                                        <th class="calendar__table__item"><span>Сб</span></th>
+                                        <th class="calendar__table__item"><span>Вс</span></th>
+                                    </tr>
+                                </thead> 
+                                <tbody>
+                                    <tr class="calendar__table__tr" data="1">
+                                        <td class="calendar__table__item calendar__table__other-moth">
+                                            <a href="#" class="calendar__table__data">27 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item calendar__table__other-moth">
+                                            <a href="#" class="calendar__table__data">28 
+                                            <div class="event_wrapper"></div>
+                                        </a>
+                                        </td>
+                                        <td class="calendar__table__item calendar__table__other-moth">
+                                            <a href="#" class="calendar__table__data">29 
+                                            <div class="event_wrapper"></div>
+                                        </a>
+                                        </td>
+                                        <td class="calendar__table__item calendar__table__other-moth">
+                                            <a href="#" class="calendar__table__data">30 
+                                            <div class="event_wrapper"></div>
+                                        </a>
+                                        </td>
+                                        <td class="calendar__table__item calendar__table__item-disabled"><a href="#" class="calendar__table__data">1 
+                                            <div class="event_wrapper"></div>
+                                        </a>
+                                        </td>
+                                        <td class="calendar__table__item calendar__table__item-disabled"><a href="#" class="calendar__table__data">2 
+                                            <div class="event_wrapper"></div>
+                                        </a>
+                                        </td>
+                                        <td class="calendar__table__item calendar__table__item-disabled"><a href="#" class="calendar__table__data">3 
+                                            <div class="event_wrapper"></div>
+                                        </a>
+                                        </td>
+                                    </tr>
+                                    <tr class="calendar__table__tr" data="2">
+                                        <td class="calendar__table__item ">
+                                            <a href="#" class="calendar__table__data">4 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item ">
+                                            <a href="#" class="calendar__table__data">5 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item ">
+                                            <a href="#" class="calendar__table__data">6 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item calendar__table__item-event-days first-day">
+                                            <a href="#" class="calendar__table__data calendar__table__data-event-future calendar__table__data-active">7 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item calendar__table__item-event-days">
+                                            <a href="#" class="calendar__table__data">8 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item calendar__table__item-event-days">
+                                            <a href="#" class="calendar__table__data calendar__table__data-event-future">9 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item calendar__table__item-event-days">
+                                            <a href="#" class="calendar__table__data">10 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    <tr class="calendar__table__tr" data="3">
+                                        <td class="calendar__table__item calendar__table__item-event-days last-day">
+                                            <a href="#" class="calendar__table__data">11 
+                                            <div class="event_wrapper"></div></a>
+                                        </td>
+                                        <td class="calendar__table__item ">
+                                            <a href="#" class="calendar__table__data calendar__table__data-event-future">12 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item ">
+                                            <a href="#" class="calendar__table__data">13 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item ">
+                                            <a href="#" class="calendar__table__data ui-state-active">14 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item ">
+                                            <a href="#" class="calendar__table__data calendar__table__data-event-future">15 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item ">
+                                            <a href="#" class="calendar__table__data">16 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item ">
+                                            <a href="#" class="calendar__table__data">17 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    <tr class="calendar__table__tr" data="4">
+                                        <td class="calendar__table__item ">
+                                            <a href="#" class="calendar__table__data">18 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item ">
+                                            <a href="#" class="calendar__table__data">19 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item "><a href="#" class="calendar__table__data">20 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item "><a href="#" class="calendar__table__data">21 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item ui-datepicker-today">
+                                            <a href="#" class="calendar__table__data ui-state-active">22 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item ">
+                                            <a href="#" class="calendar__table__data">23 
+                                            <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item ">
+                                            <a href="#" class="calendar__table__data">24 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    <tr class="calendar__table__tr" data="5">
+                                        <td class="calendar__table__item ">
+                                            <a href="#" class="calendar__table__data">25 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item ">
+                                            <a href="#" class="calendar__table__data">26 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item ">
+                                            <a href="#" class="calendar__table__data">27 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item ">
+                                            <a href="#" class="calendar__table__data">28 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item ">
+                                            <a href="#" class="calendar__table__data">29 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item ">
+                                            <a href="#" class="calendar__table__data">30 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                        <td class="calendar__table__item ">
+                                            <a href="#" class="calendar__table__data">31 
+                                                <div class="event_wrapper"></div>
+                                            </a>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                     <div class="calendar__info slider">
