--- a/plan-events.html
+++ b/plan-events.html
@@ -217,19 +217,19 @@
                                                 <div class="event_wrapper"></div>
                                             </a>
                                         </td>
-                                        <td class="calendar__table__item calendar__table__item-event-days">
+                                        <td class="calendar__table__item calendar__table__item-event-days ">
                                             <a href="#" class="calendar__table__data calendar__table__data-event-future">9 
                                                 <div class="event_wrapper"></div>
                                             </a>
                                         </td>
-                                        <td class="calendar__table__item calendar__table__item-event-days">
+                                        <td class="calendar__table__item calendar__table__item-event-days last-day">
                                             <a href="#" class="calendar__table__data">10 
                                                 <div class="event_wrapper"></div>
                                             </a>
                                         </td>
                                     </tr>
                                     <tr class="calendar__table__tr" data="3">
-                                        <td class="calendar__table__item calendar__table__item-event-days last-day">
+                                        <td class="calendar__table__item">
                                             <a href="#" class="calendar__table__data">11 
                                             <div class="event_wrapper"></div></a>
                                         </td>
